# PEA

./: README.md
project_1/: CMakeLists.txt  bruteforce.cpp  bruteforce.h  config.cpp  config.h  main.cpp  nearestneighbor.cpp  nearestneighbor.h  randomalgorithm.cpp  randomalgorithm.h  tsp_utils.cpp  tsp_utils.h
project_1/tsp/: tsp12_as.txt  tsp13_as.txt  tsp_10.txt  tsp_14.txt
project_2/: CMakeLists.txt  branch_and_bound.cpp  branch_and_bound.h  main.cpp  results.xls  tsp_utils.cpp  tsp_utils.h
project_2/tsp/: tsp_101.txt
project_3/project_3/: CMakeLists.txt  config.h  config.txt  main.cpp  results.txt  results.xls  tabu_search.cpp  tabu_search.h  tsp_utils.cpp  tsp_utils.h
project_3/project_3/tsp/: ftv64.txt  kroA100.txt  rbg323.txt  tsp10_as.txt  tsp8_as.txt  tsp_14.txt  tsp_6_1.txt  tsp_test_instance.txt
project_4/: CMakeLists.txt  config.h  config.txt  genetic_algorithm.cpp  genetic_algorithm.h  main.cpp  results.json  results.txt  results.xls  tsp_utils.cpp  tsp_utils.h
project_4/tsp/: ftv33.txt  ftv38.txt  ftv70.txt  kroB150.txt  tsp12_as.txt  tsp13_as.txt  tsp14_as.txt  tsp6_as.txt  tsp_10.txt  tsp_12.txt  tsp_13.txt  tsp_4_1.txt
script/: main.py
